2005-05-22 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Bumped version to 0.9.4-dev
        * Changed hash_mm prototype in eaccelerator.h to non-inline (Compaq c compiler)
        * Fixes from patch 1206311 + some unused variable clean ups

2005-05-18 Franck Tabary <franck34 at users.sourceforge.net>

        * released eAccelerator 0.9.3 final

2005-05-16 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Added --without-eaccelerator-use-inode configure switch to disable the use
          of inode numbers for the hash keys (Feature request 1201159). The default
          behaviour doesn't change.
        * Fix for bug 1202296 based on patch 1202708

2005-05-15 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Compile fix for bug 1201564.

2005-05-14 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * The session lifetime patch only fixed the problem when using one type of session handler. It's now 
          also fixed for the other type of session handler.

2005-05-12 Franck Tabary <franck34 at users.sourceforge.net>

        * released eAccelerator 0.9.3-rc2

2005-05-11 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fix for must constructor related problems with encoded scripts and php5. Also a fixes
          memory leak in the loader. (Thanks larnot)

2005-05-10 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
	
        * Added some includes to satisfy VC.NET (thanks to dakalka, patch 1198522)
        * This patch adds the right destructor for the propertiesinfo hashtable, but it doesn't fix bug 1179270
        * Updated README.win32 with some extra information from Larnot

2005-05-09 Franck Tabary <franck34 at users.sourceforge.net>

        * released eAccelerator 0.9.3-rc1

2005-05-09 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fixes the segfault when loading encoded script with eloader and php5
        * Commited README.win32 with instructions to compile eAccelerator on windows